tests/invalid/coerce_infer.err_exp
coerce_infer.m:026: In clause for function `f'/1:
coerce_infer.m:026:   error: the type of [38;5;87m`X'[39;49m is [38;5;203munresolved;[39;49m cannot coerce from
coerce_infer.m:026:   `V_1' to `V_2'.
